Remove unnecessary transition property

--- a/client/src/styles/_btn.scss
+++ b/client/src/styles/_btn.scss
@@ -13,7 +13,7 @@
     background-color: var(--local-btn-background-color);
     color: var(--local-btn-text-color);
 
-    transition: transform 0.1s, opacity 0.1s;
+    transition: opacity 0.1s;
 
     position: relative;
     overflow: hidden;
