--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -7,3 +7,5 @@ $standardVerticalPadding: 8px;
 $standardHorizontalPadding: 12px;
 $standardPadding: $standardVerticalPadding $standardHorizontalPadding;
 $standardBorderRadius: 8px;
+
+$peekWidth: 32px;
