Remove button highlight from minimize button

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -169,6 +169,7 @@ textarea {
     & > #waypoint-editor-hide-button {
         margin-left: 0;
         margin-top: 0;
+        background-color: transparent;
     }
 }
 
