Improve collapsed status bar appearance
- Fix padding issue when "Routing XX%" text is shown
- Use same icon as minimize button for consistency

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -208,8 +208,8 @@ textarea {
     &.collapsed {
         display: inline-flex;
 
-        & > *:first-child {
-            margin-right: $standardHorizontalPadding;
+        & > *:not(:first-child) {
+            margin-left: $standardHorizontalPadding;
         }
     }
 }
