Optimize site on compact devices
Remove unnecessary text, tighten paddings and hide some extraneous
features when in compact mode.

--- a/client/src/styles/_btn.scss
+++ b/client/src/styles/_btn.scss
@@ -19,6 +19,11 @@
     position: relative;
     overflow: hidden;
 
+    @media (max-width: $compactBreakpoint) {
+        padding: #{$standardVerticalPadding * 3 / 4} #{$standardHorizontalPadding * 3 / 4};
+        line-height: 1.25;
+    }
+
     &::after {
         content: "";
 
