--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -39,6 +39,11 @@ textarea {
     background-color: var(--app-form-control-color);
     border: 1px solid var(--app-heavy-border-color);
 
+    @media (max-width: $compactBreakpoint) {
+        padding: #{$standardVerticalPadding * 3 / 4} #{$standardHorizontalPadding * 3 / 4};
+        line-height: 1.25;
+    }
+
     &::placeholder {
         color: var(--app-secondary-text-color);
     }
@@ -128,6 +133,10 @@ textarea {
 #app-title {
     font-size: 2rem;
     font-weight: 500;
+
+    @media (max-width: $compactBreakpoint) {
+        font-size: 1.5rem;
+    }
 }
 
 #app-version {
@@ -234,6 +243,11 @@ textarea {
         padding: $standardPadding;
 
         line-height: 1.5;
+
+        @media (max-width: $compactBreakpoint) {
+            padding: #{$standardVerticalPadding * 3 / 4} #{$standardHorizontalPadding * 3 / 4};
+            line-height: 1.25;
+        }
     }
 
     & > *:first-child {
