Use tighter spacings in compact mode

--- a/client/src/styles/_alert.scss
+++ b/client/src/styles/_alert.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 .alert {
-    margin: $standardMargin;
+    margin: var(--standard-margin);
     margin-bottom: 0;
 }
 
