Move new waypoint input field to footer

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -175,7 +175,7 @@ textarea {
 
     @include frosted-uncolored();
 
-    & > * {
+    & > :not(.input-row) {
         float: left;
         margin-top: var(--standard-margin);
         margin-left: var(--standard-margin);
