Use consistent structure to layout editor body

--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -60,6 +60,10 @@
     color: var(--app-secondary-text-color);
 }
 
+.text-warning {
+    color: var(--apple-system-orange);
+}
+
 .text-danger {
     color: var(--apple-system-red);
 }
