--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -244,7 +244,7 @@ textarea {
 
     > * {
         border-radius: calc(var(--standard-border-radius) / 2);
-        margin-left: calc(var(--standard-margin) / 2);
+        margin-right: calc(var(--standard-margin) / 2);
 
         padding: var(--standard-vertical-padding) var(--standard-horizontal-padding);
 
@@ -252,13 +252,13 @@ textarea {
     }
 
     > *:first-child {
-        margin-left: 0;
-
         border-top-left-radius: var(--standard-border-radius);
         border-bottom-left-radius: var(--standard-border-radius);
     }
 
     > *:last-child {
+        margin-right: 0;
+
         border-top-right-radius: var(--standard-border-radius);
         border-bottom-right-radius: var(--standard-border-radius);
     }
