--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -95,29 +95,38 @@ textarea {
 }
 
 #waypoint-editor-hide-button {
-    border-radius: 0;
     width: 100%;
+
+    background-color: transparent;
+
+    border-radius: 0;
+    border-left: none;
+    border-right: none;
+}
+
+#waypoint-editor-header,
+#waypoint-editor-footer {
+    position: sticky;
+    z-index: 1;
+
+    @include frosted-uncolored();
 }
 
 #waypoint-editor-header {
-    position: sticky;
     top: 0;
-
-    z-index: 2;
-
     border-bottom: 1px solid var(--app-border-color);
 
-    @include frosted-uncolored();
+    > #waypoint-editor-hide-button {
+        border-top: none;
+    }
+}
+
+#waypoint-editor-footer {
+    bottom: 0;
+    border-top: 1px solid var(--app-border-color);
 
     > #waypoint-editor-hide-button {
-        margin-left: 0;
-        margin-top: 0;
-
-        background-color: transparent;
-
-        border-left: none;
-        border-right: none;
-        border-top: none;
+        border-bottom: none;
     }
 }
 
@@ -173,33 +182,6 @@ textarea {
     }
 }
 
-#waypoint-editor-footer {
-    position: sticky;
-    bottom: 0;
-
-    overflow: auto;
-    z-index: 1;
-
-    border-top: 1px solid var(--app-border-color);
-
-    @include frosted-uncolored();
-
-    > #route-statusbar {
-        margin-left: 0;
-    }
-
-    > #waypoint-editor-hide-button {
-        margin-left: 0;
-        margin-top: 0;
-
-        background-color: transparent;
-
-        border-left: none;
-        border-right: none;
-        border-bottom: none;
-    }
-}
-
 #waypoint-editor-footer-items {
     padding-left: var(--standard-margin);
     padding-top: var(--standard-margin);
@@ -216,8 +198,6 @@ textarea {
 
     &:not(.collapsed) {
         display: flex;
-
-        z-index: 2;
 
         position: sticky;
         bottom: 0;
@@ -375,7 +355,6 @@ textarea {
     width: 100%;
     height: 4px;
     overflow: hidden;
-    z-index: 4;
 
     svg {
         position: absolute;
