--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,16 +92,12 @@
 }
 
 #app-title {
-    font-size: 2rem;
+    font-size: 24px;
     font-weight: 500;
-
-    @media (max-width: $compactBreakpoint) {
-        font-size: 1.5rem;
-    }
 }
 
 #app-version {
-    font-size: 1rem;
+    font-size: 16px;
     color: var(--app-secondary-text-color);
 }
 
@@ -278,7 +274,7 @@
     color: var(--app-secondary-text-color);
 
     > .spacer {
-        width: 0.5em;
+        width: 8px;
         display: inline-block;
     }
 
