--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -262,9 +262,21 @@
     }
 }
 
-.waypoint-item-selected > span {
+.waypoint-item-index {
+    font-variant-numeric: tabular-nums;
+
+    i {
+        opacity: 0.5;
+    }
+}
+
+.waypoint-item-selected .waypoint-item-index {
     background-color: var(--apple-system-blue);
     color: white;
+
+    i {
+        opacity: 1;
+    }
 }
 
 .waypoint-item-dragging-along {
