--- a/src/components/WaypointEditor.scss
+++ b/src/components/WaypointEditor.scss
@@ -1,5 +1,5 @@
-@import "../../styles/variables";
-@import "../../styles/colors";
+@import "../styles/variables";
+@import "../styles/colors";
 
 #waypoint-editor {
     position: absolute;
