--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,7 +43,7 @@ textarea {
 
     transition: background-color 0.2s, border 0.2s;
     background-color: var(--app-form-control-color);
-    border: 1px solid var(--app-heavy-border-color);
+    border: 1px solid var(--app-border-color);
 
     &::placeholder {
         color: var(--app-secondary-text-color);
@@ -93,7 +93,7 @@ textarea {
 
     > span {
         background-color: var(--app-input-row-span-color);
-        border: 1px solid var(--app-heavy-border-color);
+        border: 1px solid var(--app-border-color);
 
         &:focus {
             outline: none;
