Redo app layout

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -12,6 +12,7 @@
 
     // App Colors
     --app-background-color: rgb(224, 224, 224);
+    --app-background-color: hsl(40, 50%, 95%);
     --app-primary-text-color: rgb(0, 0, 0);
     --app-secondary-text-color: rgba(0, 0, 0, 0.5);
     --app-form-control-color: rgba(0, 0, 0, 0.05);
@@ -37,6 +38,7 @@
 
         // App Colors
         --app-background-color: rgb(64, 64, 64);
+        --app-background-color: hsl(210, 5%, 20%);
         --app-primary-text-color: rgb(255, 255, 255);
         --app-secondary-text-color: rgba(255, 255, 255, 0.5);
         --app-form-control-color: rgba(0, 0, 0, 0.2);
