--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,8 @@
 }
 
 html {
+    --border-width: 1px;
+
     background-color: var(--app-background-color);
     color: var(--app-primary-text-color);
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
