--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 }
 
 :root {
-    background-color: var(--app-background-color);
+    background-color: var(--primary-fill-color);
     color: var(--primary-text-color);
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     -webkit-tap-highlight-color: transparent;
